# entertainer_arthur

./: .gitignore  Cargo.toml  Dockerfile  config.yaml  docker-compose.yaml  index.html  package.json
benches/: bench1.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  upload  vite.config.ts.timestamp-1708148856499-86b9730684662.mjs
frontend/src/: App.module.scss  App.tsx  GeneralStyles.scss  MainLayout.tsx  colors.scss  helpres.tsx  index.scss  main.tsx  types.ts
frontend/src/Components/: About.module.scss  About.tsx  Advantages.module.scss  Advantages.tsx  ContactMeWindow.module.scss  ContactMeWindow.tsx  Contacts.module.scss  Contacts.tsx  EmailForm.module.scss  EmailForm.tsx  Footer.module.scss  Footer.tsx  Hero.module.scss  Hero.tsx  Loader.module.scss  Loader.tsx  Meeting.module.scss  Meeting.tsx  NavBar.module.scss  NavBar.tsx  PhotoGallery.module.scss  PhotoGallery.tsx  PhotoSection.module.scss  PhotoSection.tsx  SpecialOffer.module.scss  SpecialOffer.tsx  Video.module.scss  Video.tsx
frontend/src/Pages/: AgreementPage.module.scss  AgreementPage.tsx  MainPage.tsx  PageNotFound.module.scss  PageNotFound.tsx
frontend/src/state/: isInitialLoadSlice.ts  sectionHeightsSlice.ts  sectionYOffsetSlice.ts  shouldScrollToSlice.ts  store.ts
src/: App.tsx  client.rs  colors.scss  config.rs  index.scss  lib.rs  main.rs  smtp_client.rs
src/Components/: ContactMeWindow.module.scss  ContactMeWindow.tsx  Hero.module.scss  Hero.tsx  NavBar.module.scss  NavBar.tsx
