[package]
name = "entertainer_arthur"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench1"
harness = false

[dependencies]

# Web-related dependencies
axum = { version = "0.7.4", features = ["macros", "tracing", "multipart"] }
tokio = { version = "1.35.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tower = { version = "0.4.13", features = ["timeout"] }
lettre = { version = "0.11.4", features = ["tokio1-native-tls"] }

# Serialization-related dependencies
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"

# Utility and miscellaneous dependencies
anyhow = "1.0.79"
config = "0.13.4"
garde = { version = "0.18.0", features = ["derive", "email", "phone-number"] }
time = { version = "0.3.31", features = ["local-offset", "macros", "parsing", "formatting"] }
lazy_static = "1.4.0"
phonenumber = "0.3.3"

# Security
secrecy = { version = "0.8.0", features = ["serde"] }

# Telemetry
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "chrono",
  "registry",
  "env-filter",
] }

[dev-dependencies]
criterion = "0.5.1"

[profile.dev.package."*"]
opt-level = 3
debug = false
incremental = true

[profile.dev]
opt-level = 0
debug = false
incremental = true
